--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="./styles.css">
+    <script type="module" defer src="./script.js"></script>
     <title>BDO Bingo</title>
 </head>
 <body>
-    <h1>Caplpheon Ball Bingo!</h1>
-    <div class="mainGrid">
-
+    <div class="container">
+        <h1>Calpheon Ball Bingo!</h1>
+        <div class="buttons">
+            <button class="remove">Remove</button>        
+            <button class="generate">Generate</button>
+        </div>
+        <div class="mainGrid">
+        </div>
     </div>
 </body>
 </html>
