--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <script type="module" defer src="./script.js"></script>
-    <title>BDO Bingo</title>
+    <title>Bingo</title>
 </head>
 <body>
     <div class="container">
-        <h1>Calpheon Ball Bingo!</h1>
+        <h1>Bingo!</h1>
         <div class="buttons">
             <button class="remove">Remove</button>        
             <button class="generate">Generate</button>
